force-app/main/default/objects/Community_Service_Schedule__c/Community_Service_Schedule__c.object-meta.xml
<CustomObject>
    <label>Community Service Schedule</label>
    <nameField>
        <displayFormat>CSS-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Service Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>