force-app/main/default/objects/Community_Service_Schedule__c/fields/Backup_Tech__c.field-meta.xml
<CustomField>
    <fullName>Backup_Tech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Backup Aqua technician who covers this community when the primary tech is unavailable.</description>
    <label>Backup Tech</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Backup Service Schedule Communities</relationshipLabel>
    <relationshipName>Backup_Service_Communities</relationshipName>
    <type>Lookup</type>
</CustomField>