force-app/main/default/objects/Community_Service_Schedule__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Community Service Schedules</relationshipLabel>
    <relationshipName>Community_Service_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>