force-app/main/default/objects/Community_Service_Schedule__c/fields/Primary_Tech__c.field-meta.xml
<CustomField>
    <fullName>Primary_Tech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary Aqua technician assigned to service this community.</description>
    <label>Primary Tech</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Primary Service Schedule Communities</relationshipLabel>
    <relationshipName>Primary_Service_Communities</relationshipName>
    <type>Lookup</type>
</CustomField>